<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.dawn.backend</groupId>
    <artifactId>dawn-backend</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Backend</name>
    <description>Ticket Booking System</description>

    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>17</java.version>
        <jwt.version>0.12.6</jwt.version>
        <springdoc.version>2.8.9</springdoc.version>
        <zxing.version>3.5.3</zxing.version>
        <resilience4j.version>2.3.0</resilience4j.version>
        <jasperreports.version>6.20.6</jasperreports.version>
        <cloudinary.version>1.39.0</cloudinary.version>
    </properties>
    <dependencies>
        <!--  Tools   -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <!--  Spring Boot Test Pack -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- Child Module -->
            <dependency>
                <groupId>com.dawn.backend</groupId>
                <artifactId>dawn-web</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dawn.backend</groupId>
                <artifactId>dawn-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dawn.backend</groupId>
                <artifactId>dawn-identity</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dawn.backend</groupId>
                <artifactId>dawn-catalog</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dawn.backend</groupId>
                <artifactId>dawn-cinema</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dawn.backend</groupId>
                <artifactId>dawn-reporting</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dawn.backend</groupId>
                <artifactId>dawn-notification</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dawn.backend</groupId>
                <artifactId>dawn-booking</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dawn.backend</groupId>
                <artifactId>dawn-payment</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- API Document Packs-->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!--  Resilience4J Packs -->
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-spring-boot3</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-ratelimiter</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>

            <!--  JWT      -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jwt.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jwt.version}</version>
                <scope>runtime</scope>
            </dependency>
            <!--  Export Report      -->
            <dependency>
                <groupId>net.sf.jasperreports</groupId>
                <artifactId>jasperreports</artifactId>
                <version>${jasperreports.version}</version>
            </dependency>
            <!--   QR Code Generator     -->
            <dependency>
                <groupId>com.google.zxing</groupId>
                <artifactId>core</artifactId>
                <version>${zxing.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.zxing</groupId>
                <artifactId>javase</artifactId>
                <version>${zxing.version}</version>
            </dependency>
            <dependency>
                <groupId>com.cloudinary</groupId>
                <artifactId>cloudinary-http44</artifactId>
                <version>${cloudinary.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>dawn-web</module>
        <module>dawn-common</module>
        <module>dawn-identity</module>
        <module>dawn-catalog</module>
        <module>dawn-cinema</module>
        <module>dawn-booking</module>
        <module>dawn-notification</module>
        <module>dawn-reporting</module>
        <module>dawn-payment</module>
    </modules>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
